src/main/java/com/example/one2three3/domain/error/ErrorCode.java
package com.example.one2three3.domain.error;

public interface ErrorCode {

    String getCode();
    int getStatus();

}
